# pixelart

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml
examples/src/: first_stone.rs  main.rs  pen.rs  template.rs  transparency.rs
examples/src/partition/: mod.rs
pixelart_table_abs/: Cargo.toml
pixelart_table_abs/src/: lib.rs  table.rs
src/: growth.rs  lib.rs  prelude.rs
src/animation/: beautiful.rs  layered.rs  mod.rs  simple.rs
src/image/: mod.rs
src/pixels/: color.rs  maybe.rs  mod.rs  position.rs
src/pixels/canvas/: drawable.rs  image.rs  layered.rs  mod.rs  partition.rs  pen.rs  row.rs  table.rs
src/pixels/canvas/templates/: alien_monster.rs  heart.rs  mod.rs
src/viewer/: mod.rs
