[workspace]
members = [".", "examples"]

[package]
name = "pixelart"
version = "0.1.0"
edition = "2021"
description = "Show everyone the art hidden inside your code AGAIN."
license = "MIT"
readme = "README.md"
repository = "https://github.com/immmdreza/pixelart"
keywords = ["pixel", "graphics", "pixelart", "art", "gif"]
exclude = ["arts/", ".vscode/", "/target", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basic deps
anyhow = "1.0.86"
thiserror = "1.0.61"

# Deps related to generate and modify pictures.
image = "0.25.1"
imageproc = { version = "0.25.0" }
