[workspace]
members = [".", "examples"]

[package]
name = "pixelart"
version = "0.1.2"
edition = "2021"
description = "Show everyone the art hidden inside your code AGAIN."
license = "MIT"
readme = "README.md"
repository = "https://github.com/immmdreza/pixelart"
keywords = ["pixel", "graphics", "pixelart", "art", "gif"]
exclude = ["arts/", ".vscode/", "/target", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Basic deps
anyhow = "1.0.94"
thiserror = "2.0.7"

# Deps related to generate and modify pictures.
image = "0.25.5"
imageproc = { version = "0.25.0" }

# Optional
eframe = { version = "0.29.1", optional = true }
uuid = { version = "1.11.0", features = ["v4"], optional = true }
atomic-time = { version = "0.1", optional = true }
rfd = { version = "0.15.1", optional = true }

[features]
viewer = ["dep:eframe", "dep:uuid", "dep:atomic-time", "dep:rfd"]
